--- a/index.html
+++ b/index.html
@@ -12,7 +12,41 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>all HTML start with !DOCTYPE html</li>
+          <li>The head element contains information about the webpage.</li>
+          <li>The body element represents the visible content shown to the user.</li>
+        </ul>
+      </section>
+   
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>enter css note here</li>
+        </ul>
+      </section>
+   
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <ul>
+          <li>git checkout -b "Branch-name": checks you into a new branch and you can name the branch</li>
+          <li>git status: shows what changes you have in your current branch and see if you can add</li>
+          <li>git add -a: adds all the files to your status and then later commit</li>
+          <li>git commit -m "Your informative notes on changes": commits all the changes in your status to your current branch</li>
+          <li>git pull origin main: Good practice to see if our local branch is sync with the bas branch on github before creating a pull request</li>
+          <li>git push origin "current branch name": pushes our changes to the remote branch on github</li>
+          <li>In github you can see the push to the online branch and then creat a pull request to merge it to the mainbranch</li>
+        </ul>
+      </section>
+   
+      <section class="card" id="javascript-section">
+        <h2>JavaScript</h2>
+        <ul>
+          <li>Enter your Javascript notes here</li>
+        </ul>
+      </section>
     </main>
 
     <footer>
