added CSS to project

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Prework Study Guide</title>
+    <link rel="stylesheet" href="./assets/style.css">
   </head>
   <body>
     <header id="top">
@@ -24,7 +25,11 @@
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>enter css note here</li>
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+          <li>A padding indicates how much space we want around the content inside an element.</li>
+          <li>When applying a value like margin we can use a short cut by saying 0 20 0 20: this will result in margin on both left and righ also can be written like 0 20px.</li>
+          <li>When linking a css style sheet you use link tag in html and type "rel="decriptive name of file" href="location of file here" "</li>
+          
         </ul>
       </section>
    
