Implemented a fuction in the JS and new JS notes

--- a/index.html
+++ b/index.html
@@ -50,7 +50,11 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter your Javascript notes here</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>This === mean is this equal to this EX(4 === 4: true)</li>
+          <li>To connect a .js file to html we need to have a 'script' tag with the 'src' to the location of the file.</li>
+          <li>The script tag must also be at the bottom of the 'body' tag so that we let everything load on to the screen first then the js can use it when its done loading. If not then the JS wouldn't work properly</li>
         </ul>
       </section>
     </main>
